<resources>
    <string name="app_name" translatable="false">NS-USBloader</string>
    <string name="select_file_btn">Select files</string>
    <string name="popup_non_supported_format">File type not supported</string>
    <string name="popup_error">Error</string>
    <string name="upload_btn">Upload to NS</string>
    <string name="install_file_explorer">No file explorer installed.\nPlease install one. For example Total Commander.</string>
    <string name="ns_connected_info">NS Connected</string>
    <string name="notification_chan_name_usb">Device connected</string>
    <string name="notification_chan_desc_usb">Notification appears when user connects NS to device</string>
    <string name="ns_not_found_in_connected">NS not found in connected devices.</string>
    <string name="transfer_protocol">Protocol</string>
    <string name="transfer_transport">Transport level</string>
    <string name="nothing_selected_message">Nothing selected</string>
    <string name="transfers_service_stopped">Data transfer service has been finished.</string>
    <string name="interrupt_btn">Interrupt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tf_usb" translatable="false">Tinfoil USB</string>
    <string name="gl" translatable="false">GoldLeaf</string>
    <string name="tf_net" translatable="false">Tinfoil NET</string>
    <string name="about_app">About this app</string>
    <string name="other">Other</string>
    <string name="one_item_for_gl_notification">Only one file could be selected for GoldLeaf v0.5</string>
    <string name="no_protocol_selected_message">No protocol selected</string>
    <string name="title_activity_about">About application</string>
    <string name="about_line_1">NS-USBloader mobile</string>
    <string name="about_line_2">This application <a href="https://www.gnu.org/licenses/gpl-3.0.html">licensed under GNU GPLv3</a> or any later version.</string>
    <string name="about_line_3">Author: Dmitry Isaenko.</string>
    <string name="about_line_4">Home page: <a href="https://redrise.ru">https://redrise.ru</a>, <a href="https://github.com/developersu/ns-usbloader-mobile">https://github.com/developersu/ns-usbloader-mobile</a></string>
    <string name="about_line_5">"Translators: "</string>
    <string name="about_line_6">If you found this application useful, you\'re more than welcome to give a star on GitHub page. More information on home page. Donations (optional):</string>
    <string name="popup_incorrect_file">Incorrect file</string>
    <string name="status_failed_to_upload">(Upload failure)</string>
    <string name="status_wrong_file">(Bad NSP)</string>
    <string name="status_uploaded">(Uploaded)</string>
    <string name="status_unkown" translatable="false">(?)</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_nsIp" translatable="false">NS IP</string>
    <string name="settings_phone_ip">Phone IP</string>
    <string name="settings_phone_port">Phone port</string>
    <string name="settings_autodtct_phn_ip">Auto-detect phone IP</string>
    <string name="unknown_protocol_error">Unknown protocol selected (?)</string>
    <string name="notification_transfer_in_progress">Data transfer in progress</string>
    <string name="notification_chan_name_progress">Transfer in progress</string>
    <string name="notification_chan_desc_progress">Notification indicates transfer progress</string>
    <string name="translators" translatable="false"> ● 中文(繁體) - <a href="https://github.com/qazrfv1234">qazrfv1234</a>\n ● 中文(简体) - FFT9 <a href="http://www.xxgame.net">(XXGAME GROUP)</a>\n ● Italiano - <a href="https://github.com/IvanMazzoli">IvanMazzoli</a>\n ● 한국어 - <a href="https://github.com/DDinghoya">DDinghoya</a>\n ● 日本語 - <a href="https://github.com/kuragehimekurara1">kuragehime</a>\n ● 琉球諸語 - <a href="https://github.com/kuragehimekurara1">kuragehime</a>\n</string>
    <string-array name="dayNightSelector">
        <item>System default</item>
        <item>Day theme</item>
        <item>Night theme</item>
    </string-array>
    <string name="settings_application_settings">Application settings</string>
    <string name="settings_app_theme">Application theme:</string>
    <string name="about_line_contributors">With contributors:</string>
    <string name="contributors" translatable="false"><a href="https://github.com/htynkn">Huang YunKun</a></string>
    <string name="application_needs_usb">Application requires permission to access USB device</string>
    <string name="application_needs_notifications">Application requires permission to show notifications</string>
</resources>